##Text encoding: utf-8

2012-09-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: enhance undo/redo system.
	* libs/gcu/bond.cc: use existing atoms when loading.
	* libs/gcu/document.cc: cleaned Id translation issues.
	* libs/gcu/document.h: ditto.
	* libs/gcu/object.cc: ditto.
	* plugins/paint/selection/lassotool.cc: fixed undo flip.

2012-09-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/bracketstool.cc: don't crash when selecting a
	fragment.

2012-09-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: checks for GL/glu.h.
	* plugins/paint/bonds/newman.cc: properly initialize the bond order.
	* plugins/paint/bonds/newman.h: add the missing help tag.
	* plugins/paint/selection/selectiontool.cc: fixed a freeze.

2012-08-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.93).

2012-08-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/spectra/C/gspectrum.xml: update GCrystal user documentation.
	* libs/gcr/atomsdlg.cc: apply element change to all selected atoms.
	* ui/crystal/atoms.ui: fixed needed Gtk+ version.
	* ui/crystal/bonds.ui: ditto.
	* ui/crystal/cell.ui: ditto.
	* ui/crystal/cleavages.ui: ditto.
	* ui/crystal/docprop.ui: ditto.
	* ui/crystal/lines.ui: ditto.
	* ui/crystal/prefs.ui: ditto.
	* ui/crystal/size.ui: ditto.
	* ui/crystal/view-settings.ui: ditto.

2012-08-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomery-arrow.cc: do not save inside a dummy object.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcu/object.cc: fix loading. [#37032]
	* libs/gcugtk/cmd-context-gtk.cc: fix crasher.
	* plugins/paint/arrows/retrosynthesisarrow.cc: do not save inside a dummy
	object.

2012-08-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/spectra/C/gspectrum.xml: updated user doc for 0.14.
	* libs/gcugtk/spectrumdoc.cc: add "response factor" as unit, widgets
	spacing,and support non UTF-8 titles.